# root_checker

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  anti_debugger_check.cpp  bootloader_check.cpp  calibrate_timing_threshold.cpp  check_su.cpp  debuggable_check.cpp  dynamic_instrumentation.cpp  emulator_check.cpp  env_variable_check.cpp  fd_check.cpp  got_check.cpp  headers.h  inline_syscall.h  integrity_check.cpp  kernelsu_active_check.cpp  kernelsu_passive_check.cpp  memory_integrity.cpp  mount_namespaces_check.cpp  mount_point_discovery.cpp  native-lib.cpp  nuclear_test.cpp  path_check.cpp  port_scanning.cpp  process_detection.cpp  seal_inspection.cpp  selinux_auditing.cpp  smoke_test.cpp  syscall_helper.h  thread_check.cpp  timing_check.cpp  timing_side_channel.cpp  xorstr.h
android/app/src/main/kotlin/com/example/root_checker/: MainActivity.kt
android/app/src/main/kotlin/com/example/root_checker/security/: AccessibilityDetector.kt  KeyAttestation.kt  PackageObfuscator.kt  SettingsCheck.kt  SignatureVerifier.kt  SystemIntegrity.kt  UrlObfuscator.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
